Add a wrapper function to log entering and exiting

--- a/.envrc
+++ b/.envrc
@@ -9,3 +9,6 @@ GOPATH="$(asdf where golang)/packages"
 GOROOT="$(asdf where golang)/go"
 export GOPATH GOROOT
 PATH_add "$(go env GOPATH)/bin"
+
+# https://templ.guide/syntax-and-usage/raw-go
+export TEMPL_EXPERIMENT=rawgo
