--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,17 @@
 [*]
+charset = utf-8
+trim_trailing_whitespace = true
 end_of_line = lf
 insert_final_newline = true
 indent_style = tab
+indent_size = 4
+
 
 [Rakefile]
 indent_style = space
+indent_size = 2
+
+[*.{yaml,yml,json}]
+indent_style = space
+indent_size = 2
+
