--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,7 @@
-*
-!/app/
-/app/**/*_templ.go
-!/internal/
-!/config/
-!/server/
-!/data/
-!/types/
-!go.mod
-!go.sum
-!main.go
+.*
+*.toml
 !d2s.example.toml
+!mise.toml
+README.md
+Dockerfile
+/out
